Fixing up things

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hey!</title>
+    <meta
+      name="description"
+      content="A professional software engineer with over 4 years of experience. You can learn more about me hereby."
+    />
+    <title>Istvan Abraham | DevOps engineer</title>
   </head>
   <body>
     <div id="root"></div>
