--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     />
     <title>Istvan Abraham | DevOps engineer</title>
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <script>
+      window.FIREBASE_APPCHECK_DEBUG_TOKEN = '%VITE_FIREBASE_APPCHECK_DEBUG_TOKEN%' === 'true'
+    </script>
   </head>
   <body>
     <div id="root"></div>
